--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  gallery_saver: ^2.3.2
+  hive_flutter: ^1.1.0
+  hooks_riverpod: ^1.0.3
+  path_provider: ^2.0.9
+  permission_handler: ^9.1.0
+  qr_code_scanner: ^0.7.0
+  qr_flutter: ^4.0.0
+  shared_preferences: ^2.0.13
 
 
   # The following adds the Cupertino Icons font to your application.
